--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -228,8 +228,7 @@ You do not waive any liability rights for personal injury by signing this form.<
 			<key>Title</key>
 			<string>Withdrawing</string>
 			<key>Summary</key>
-			<string>
-			If you decide to participate, you are free to withdraw your authorization regarding the use and disclosure of your health information (and to discontinue any other participation in the study) at any time.  After any revocation, your health information will no longer be used or disclosed in the study, except to the extent that the law allows us to continue using your information (e.g., necessary to maintain integrity of research).  If you wish to revoke your authorization for the research use or disclosure of your health information in this study, you must write to: Dr. Paul Wang, 300 Pasteur Drive, Room A260, MC 5233, Stanford, CA 94305, Phone: (650) 723-9363
+			<string>If you decide to participate, you are free to withdraw your authorization regarding the use and disclosure of your health information (and to discontinue any other participation in the study) at any time.  After any revocation, your health information will no longer be used or disclosed in the study, except to the extent that the law allows us to continue using your information (e.g., necessary to maintain integrity of research).  If you wish to revoke your authorization for the research use or disclosure of your health information in this study, you must write to: Dr. Paul Wang, 300 Pasteur Drive, Room A260, MC 5233, Stanford, CA 94305, Phone: (650) 723-9363
 			
 The Protocol Director may also withdraw you from the study without your consent for one or more of the following reasons
 o Failure to follow the instructions of the Protocol Director and study staff.
