--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -52,6 +52,8 @@
 	<true/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app uses Bluetooth to connect to health devices, such as scales and blood pressure monitors</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app uses Bluetooth to connect to health devices, such as scales and blood pressure monitors</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSFaceIDUsageDescription</key>
@@ -66,6 +68,8 @@
 	<string>Used for sensor collection demo tasks.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Used for sensor collection demo tasks.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location as a part of our clinical trial and adherence practices</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSMotionUsageDescription</key>
@@ -94,7 +98,6 @@
 		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
-		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
