--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -59,9 +59,7 @@
 	<key>Consent Title</key>
 	<string>Research Health Study Consent Form</string>
 	<key>HealthKit Data to Read</key>
-	<array>
-		<string>StepCount</string>
-	</array>
+	<array/>
 	<key>Onboarding</key>
 	<array>
 		<dict>
