Add Granola Pod

--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -11,5 +11,6 @@ target 'CardinalKit_Example' do
   pod 'Firebase/Storage'
   pod 'Firebase/Analytics'
   pod 'Firebase/DynamicLinks'
+  pod 'Granola'
 
 end
