--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>Study Title</key>
-	<string>CardinalKit Study</string>
+	<string>CardinalKit</string>
 	<key>Team Name</key>
-	<string>Stanford Department of Medicine</string>
+	<string>Stanford Byers Center for Biodesign</string>
 	<key>Email</key>
 	<string>contact@domain.com</string>
 	<key>Phone</key>
