Fixes cancel button on Change Passcode view

--- a/CardinalKit-Example/CardinalKit/Supporting Files/GoogleService-Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>267563013930-esrpvvdn6429pbd50qfpo2rgh1rgsl9e.apps.googleusercontent.com</string>
+	<string>108938987400-fqa5u93u0f80a0r3gs8tttfkg6baib9d.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.267563013930-esrpvvdn6429pbd50qfpo2rgh1rgsl9e</string>
+	<string>com.googleusercontent.apps.108938987400-fqa5u93u0f80a0r3gs8tttfkg6baib9d</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDZFphOPsibFOO40SdVJfRF-lVgH21riJk</string>
+	<string>AIzaSyByREiZQPb_fLAEI3nXEK5Fgp8KNex3_gQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>267563013930</string>
+	<string>108938987400</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>edu.stanford.cardinalkit</string>
+	<string>com.vishnuravi.cardinalkit</string>
 	<key>PROJECT_ID</key>
-	<string>cs342-master-sample</string>
+	<string>cardinalkit-dev</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cs342-master-sample.appspot.com</string>
+	<string>cardinalkit-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:267563013930:ios:d1af91089e477416ccb053</string>
-	<key>DATABASE_URL</key>
-	<string>https://cs342-master-sample.firebaseio.com</string>
+	<string>1:108938987400:ios:18089af7473e8ae9b4dc3d</string>
 </dict>
 </plist>
