Add multiple sign in ways (Facebook,google,apple)

--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -12,6 +12,8 @@ target 'CardinalKit_Example' do
   pod 'Firebase/Storage'
   pod 'Firebase/Analytics'
   pod 'Firebase/DynamicLinks'
+  pod 'GoogleSignIn'
+  pod 'FBSDKLoginKit'
   
 
 end
