--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -4,8 +4,8 @@ target 'CardinalKit_Example' do
   pod 'CardinalKit', :path => '../'
   
   # CK Sample Pods
-  pod 'ResearchKit', :git => 'https://github.com/ResearchKit/ResearchKit.git', :branch => 'master'
-  pod 'Granola', :git => 'https://github.com/Alternova-Inc/Granola.git', :branch => 'Main'
+  pod 'ResearchKit', :git => 'https://github.com/ResearchKit/ResearchKit.git', :branch => 'main'
+  pod 'Granola', :git => 'https://github.com/CardinalKit/Granola.git', :branch => 'main'
   
   pod 'Firebase/Firestore'
   pod 'Firebase/Auth'
