--- a/CardinalKit-Example/CardinalKit-Example.entitlements
+++ b/CardinalKit-Example/CardinalKit-Example.entitlements
@@ -15,9 +15,9 @@
 	<key>com.apple.developer.healthkit</key>
 	<true/>
 	<key>com.apple.developer.healthkit.access</key>
-	<array>
-		<string>health-records</string>
-	</array>
+	<array/>
+	<key>com.apple.developer.healthkit.background-delivery</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)edu.stanford.cs342.sample-study</string>
