--- a/CardinalKit-Example/CardinalKit_ExampleRelease.entitlements
+++ b/CardinalKit-Example/CardinalKit_ExampleRelease.entitlements
@@ -15,9 +15,7 @@
 	<key>com.apple.developer.healthkit</key>
 	<true/>
 	<key>com.apple.developer.healthkit.access</key>
-	<array>
-		<string>health-records</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.healthkit.background-delivery</key>
 	<true/>
 	<key>keychain-access-groups</key>
