--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,14 +6,12 @@ on:
       - main
   pull_request:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
     name: Build
     runs-on: macos-12
-    defaults:
-      run:
-        working-directory: CardinalKit-Example
     steps:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1
@@ -52,4 +50,4 @@ jobs:
         mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
         cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
     - name: Build and test
-      run: bundler install && bundle exec fastlane test
+      run: bundler install && bundle exec fastlane build
