--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -199,6 +199,55 @@
 			<string>3️⃣</string>
 		</dict>
 	</array>
+		<key>Contacts</key>
+	<array>
+		<dict>
+			<key>givenName</key>
+			<string>Oliver</string>
+			<key>familyName</key>
+			<string>Aalami</string>
+			<key>title</key>
+			<string>Vascular Surgeon</string>
+			<key>role</key>
+			<string>Dr. Aalami is the director of the CardinalKit project.</string>
+			<key>email</key>
+			<string>aalami@stanford.edu</string>
+			<key>phone</key>
+			<string>111-111-1111</string>
+			<key>text</key>
+			<string>111-111-1111</string>
+			<key>street</key>
+			<string>318 Campus Drive</string>
+			<key>city</key>
+			<string>Stanford</string>
+			<key>state</key>
+			<string>CA</string>
+			<key>postalCode</key>
+			<string>94305</string>
+		</dict>
+		<dict>
+			<key>givenName</key>
+			<string>Johnny</string>
+			<key>familyName</key>
+			<string>Appleseed</string>
+			<key>title</key>
+			<string>OBGYN</string>
+			<key>role</key>
+			<string>Dr. Appleseed is an OBGYN with 13 years of experience.</string>
+			<key>phone</key>
+			<string>(324) 555-7415</string>
+			<key>text</key>
+			<string>(324) 555-7415</string>
+			<key>street</key>
+			<string>318 Campus Drive</string>
+			<key>city</key>
+			<string>Stanford</string>
+			<key>state</key>
+			<string>CA</string>
+			<key>postalCode</key>
+			<string>94305</string>
+		</dict>
+	</array>
 	<key>Use Cloud Surveys</key>
 	<false/>
 </dict>
