Clean up viewDidLoad()

--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -56,7 +56,7 @@
 	<key>Sign In Screen</key>
 	<dict>
 		<key>Label Text</key>
-		<string>Sign In</string>
+		<string>Sign In to CardinalKit</string>
 		<key>Label Font Size</key>
 		<integer>35</integer>
 	</dict>
