--- a/CardinalKit-Example/Podfile
+++ b/CardinalKit-Example/Podfile
@@ -14,6 +14,6 @@ target 'CardinalKit_Example' do
   pod 'Firebase/DynamicLinks'
   pod 'GoogleSignIn'
   pod 'FBSDKLoginKit'
-  
+  pod 'Swinject'
 
 end
