Updates build action to use MacOS 12

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: macos-12
     defaults:
       run:
         working-directory: CardinalKit-Example
