--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,14 @@ on:
       - main
   pull_request:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
     name: Build
     runs-on: macos-12
-    defaults:
-      run:
-        working-directory: CardinalKit-Example
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
@@ -23,7 +21,13 @@ jobs:
       run: |
           xcodebuild -version
           swift --version
-    - name: Install Dependencies
-      run: pod install
-    - name: Build
-      run: xcodebuild build -workspace CardinalKit.xcworkspace -scheme CardinalKit-Example -destination 'platform=iOS Simulator,name=iPhone 13'
+    - uses: actions/cache@v3
+      with:
+        path: CardinalKit-Example/Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('CardinalKit-Example/Podfile.lock') }}
+    - uses: actions/cache@v3
+      with:
+        path: ~/Library/Caches/org.swift.swiftpm/
+        key: ${{ runner.os }}-spm-${{ hashFiles('CardinalKit-Example/CardinalKit.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+    - name: Build and test
+      run: bundler install && bundle exec fastlane build
