--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ playground.xcworkspace
 CardinalKit-Example/Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+*.xcworkspace
 
 # Carthage
 #
