Fix GitHub Action

--- a/.github/workflows/beta-deployment.yml
+++ b/.github/workflows/beta-deployment.yml
@@ -19,7 +19,7 @@ jobs:
   # buildandtest:
   #   name: Build and Test
   #   uses: ./.github/workflows/build.yml
-    secrets: inherit
+  #   secrets: inherit
   iosapptestflightdeployment:
     name: iOS App TestFlight Deployment
     runs-on: macos-12
